cputrack/qtrk_c_api.h

// 24 bytes
struct LocalizationJob {
	LocalizationJob() {
		frame=timestamp=zlutIndex=0; 
	}
	LocalizationJob(uint frame, uint timestamp, uint zlutPlane, uint zlutIndex) :
		frame (frame), timestamp(timestamp), zlutIndex(zlutIndex) 
	{}
	uint frame, timestamp;   
	int zlutIndex; // or bead#
	vector3f initialPos;
};
// DONT CHANGE, Mapped to labview clusters!
// 13*4 = 52 bytes
struct LocalizationResult {
	LocalizationJob job; //24
	vector3f pos;
	vector2f pos2D() { return vector2f(pos.x,pos.y); }
	vector2f firstGuess; // COM pos
	uint error;
	float imageMean;
};
struct ROIPosition
{
	int x,y; // top-left coordinates. ROI is [ x .. x+w ; y .. y+h ]
};
typedef TImageData<float> ImageData;
/*	virtual void SetConfigValue(std::string name, std::string value) = 0;
	typedef std::map<std::string, std::string> ConfigValueMap;
	virtual ConfigValueMap GetConfigValues() = 0;
	*/

CDLL_EXPORT void DLL_CALLCONV QTrkGetProfileReport(QueuedTracker* qtrk, char *dst, int maxStrLen);
CDLL_EXPORT void DLL_CALLCONV QTrkGetWarnings(QueuedTracker* qtrk, char *dst, int maxStrLen);
CDLL_EXPORT void QTrkFreeROIPositions(ROIPosition *data);
	// sample needs to be preallocated with a [roi,roi] image in order for QTrkFindBeads to copy the data into it, otherwise it is ignored.
CDLL_EXPORT ROIPosition* QTrkFindBeads(ImageData* imgData, int smpCornerPosX, int smpCornerPosY, int roi, float imgRelDist, float acceptance, int *beadcount, ImageData* sample=0);
struct ResultManagerConfig
{
	int numBeads, numFrameInfoColumns;
	vector3f scaling;
	vector3f offset; // output will be (position + offset) * scaling
	int writeInterval; // [frames]
	uint maxFramesInMemory; // 0 for infinite
	uint8_t binaryOutput;
};
struct RMFrameCounters {
	RMFrameCounters();
	int startFrame; // startFrame for frameResults
	int processedFrames; // frame where all data is retrieved (all beads)
	int lastSaveFrame;
	int capturedFrames;  // lock by resultMutex
	int localizationsDone;
	int lostFrames;
	int fileError;
};
CDLL_EXPORT ResultManager* DLL_CALLCONV RMCreate(const char *file, const char *frameinfo, ResultManagerConfig* cfg, const char* semicolonSeparatedNames);
CDLL_EXPORT void DLL_CALLCONV RMSetTracker(ResultManager* rm, QueuedTracker* qtrk);
CDLL_EXPORT void DLL_CALLCONV RMDestroy(ResultManager* rm);
CDLL_EXPORT void DLL_CALLCONV RMStoreFrameInfo(ResultManager* rm, int frame, double timestamp, float* cols);
CDLL_EXPORT int DLL_CALLCONV RMGetBeadResults(ResultManager* rm, int start, int numFrames, int bead, LocalizationResult* results);
CDLL_EXPORT void DLL_CALLCONV RMGetFrameCounters(ResultManager* rm, RMFrameCounters* dst);
CDLL_EXPORT void DLL_CALLCONV RMFlush(ResultManager* rm);
CDLL_EXPORT int DLL_CALLCONV RMGetResults(ResultManager* rm, int startFrame, int numFrames, LocalizationResult* results);
CDLL_EXPORT void DLL_CALLCONV RMRemoveBead(ResultManager* rm, int bead);
CDLL_EXPORT void DLL_CALLCONV RMGetConfig(ResultManager* rm, ResultManagerConfig* cfg);