cputrack/utils.h

template<typename TPixel>
void normalize(TPixel* d, uint w,uint h)
{
	TPixel maxv = d[0];
	TPixel minv = d[0];
	for (uint k=0;k<w*h;k++) {
		maxv = std::max(maxv, d[k]);
		minv = std::min(minv, d[k]);
	}
	for (uint k=0;k<w*h;k++)
		d[k]=(d[k]-minv)/(maxv-minv);
}
CDLL_EXPORT void DLL_CALLCONV ComputeRadialProfile(float* dst, int radialSteps, int angularSteps, float minradius, float maxradius, vector2f center, ImageData* src, float mean, bool normalize);
CDLL_EXPORT void DLL_CALLCONV NormalizeRadialProfile(float* prof, int rsteps);
CDLL_EXPORT void DLL_CALLCONV NormalizeImage(ImageData* image);
CDLL_EXPORT void DLL_CALLCONV GenerateImageFromLUT(ImageData* image, ImageData* zlut, float minradius, float maxradius, vector3f pos, bool useSplineInterp=true, int ovs=4);
CDLL_EXPORT void DLL_CALLCONV ApplyPoissonNoise(ImageData& img, float poissonMax, float maxValue=255);
CDLL_EXPORT void DLL_CALLCONV ApplyGaussianNoise(ImageData& img, float sigma);