QTrkDotNet/QTrkDLL.cs


        /*	virtual void SetConfigValue(std::string name, std::string value) = 0;
	        typedef std::map<std::string, std::string> ConfigValueMap;
	        virtual ConfigValueMap GetConfigValues() = 0;
	        */

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void QTrkGetProfileReport(IntPtr qtrk, char* dst, int maxStrLen);
        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void QTrkGetWarnings(IntPtr qtrk, char* dst, int maxStrLen);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void QTrkGetComputedConfig([In] ref QTrkConfig cfg, [Out] out QTrkComputedConfig cc);


		[SuppressUnmanagedCodeSecurity]
		[DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
		public static extern void ComputeRadialProfile(float[] dst, int radialSteps, int angularSteps, float minradius, float maxradius, Vector2 center, ImageData* src, float mean, bool normalize);
		[SuppressUnmanagedCodeSecurity]
		[DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
		public static extern void NormalizeRadialProfile([MarshalAs(UnmanagedType.LPArray)] float[] prof, int rsteps);
		[SuppressUnmanagedCodeSecurity]
		[DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
		public static extern void GenerateImageFromLUT(ref ImageData image, [In] ref ImageData zlut, float minradius, float maxradius, Vector3 pos, bool useSplineInterp, int ovs);
		[SuppressUnmanagedCodeSecurity]
		[DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
		public static extern void NormalizeImage([In] ref ImageData img);
		[SuppressUnmanagedCodeSecurity]
		[DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
		public static extern void ApplyPoissonNoise([In] ref ImageData img, float poissonMax, float maxValue);
		[SuppressUnmanagedCodeSecurity]
		[DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
		public static extern void ApplyGaussianNoise([In] ref ImageData img, float sigma);

		// sample needs to be preallocated with a [roi,roi] image in order for QTrkFindBeads to copy the data into it, otherwise it is ignored.
		[SuppressUnmanagedCodeSecurity]
		[DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr QTrkFindBeads(ref ImageData image, int smpCornerPosX, int smpCornerPosY, int roi, float imgRelDist, float acceptance, out int beadCount, ref ImageData sample);
		[SuppressUnmanagedCodeSecurity]
		[DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void QTrkFreeROIPositions(IntPtr data);

		[SuppressUnmanagedCodeSecurity]
		[DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
		public static extern IntPtr RMCreate(string file, string frameinfo, [In] ref ResultManagerConfig cfg, string semicolonSeparatedNames);
		[SuppressUnmanagedCodeSecurity]
		[DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
		public static extern void RMSetTracker(IntPtr rm, IntPtr qtrk);
		[DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
		public static extern void RMDestroy(IntPtr rm);
		[SuppressUnmanagedCodeSecurity]
		[DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
		public static extern void RMStoreFrameInfo(IntPtr rm, int frame, double timestamp, float[] cols);
		[SuppressUnmanagedCodeSecurity]
		[DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
		public static extern int RMGetBeadResults(IntPtr rm, int start, int numFrames, int bead, [MarshalAs(UnmanagedType.LPArray)] out LocalizationResult[] results);
		[SuppressUnmanagedCodeSecurity]
		[DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
		public static extern void RMGetFrameCounters(IntPtr rm, out RMFrameCounters dst);
		[SuppressUnmanagedCodeSecurity]
		[DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
		public static extern void RMFlush(IntPtr rm);
		[SuppressUnmanagedCodeSecurity]
		[DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
		public static extern int RMGetResults(IntPtr rm, int startFrame, int numFrames, [MarshalAs(UnmanagedType.LPArray)] out LocalizationResult[] results);
		[SuppressUnmanagedCodeSecurity]
		[DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
		public static extern void RMRemoveBead(IntPtr rm, int bead);
		[SuppressUnmanagedCodeSecurity]
		[DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
		public static extern void RMGetConfig(IntPtr rm, out ResultManagerConfig cfg);

        [DllImport("kernel32.dll", CharSet = CharSet.Unicode, SetLastError = true)]
        [return: MarshalAs(UnmanagedType.Bool)]
        static extern bool SetDllDirectory(string lpPathName);

        public static void SelectNativeLibrary(string baseDir, bool debugMode, bool useCUDA, bool use64Bit)
        {
            string dirname = debugMode ? "debug" : "release";
            if (useCUDA) dirname = "cuda_" + dirname;
            if (use64Bit) dirname = dirname + "_64";

			string finalDir = baseDir + Path.DirectorySeparatorChar + "QTrkDLLs" + Path.DirectorySeparatorChar + dirname + Path.DirectorySeparatorChar;

            Trace.WriteLine("Selected QTrk native dll directory: " + finalDir);
            SetDllDirectory(finalDir);
        }


	}
}
